--- a/src/Components/Home/Banner/Banner.css
+++ b/src/Components/Home/Banner/Banner.css
@@ -1,5 +1,5 @@
 .banner-img{
-  background-image: url('C:\Users\sajon\Downloads\seclob_project\src\assets\Banner.jpg');
+  /* background-image: url('C:\Users\sajon\Downloads\seclob_project\src\assets\Banner.jpg'); */
   background-size: cover;
   width: 100%;
   height: 644px;
